--- a/webform.html
+++ b/webform.html
@@ -13,7 +13,7 @@
 <!--  ----------------------------------------------------------------------  -->
 
 <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DHs00000P4HDX" method="POST">
-
+  
 <input type=hidden name="oid" value="00DHs00000P4HDX">
 <input type=hidden name="retURL" value="http://">
 
@@ -23,19 +23,32 @@
 <input type="hidden" name="debug" value=1>
 <input type="hidden" name="debugEmail" value="nichaphat.jumpachot@nri-anz.com">
 <!--  ----------------------------------------------------------------------  -->
+  <div class="row mb-3">
+    <label for="first_name">First Name</label><input class="form-control" id="first_name" maxlength="40" name="first_name" size="20" type="text" /><br>
+  </div>
+  <div class="row mb-3">
+    <label for="last_name">Last Name</label><input class="form-control" id="last_name" maxlength="80" name="last_name" size="20" type="text" /><br>
+  </div>  
+  <div class="row mb-3">
+    <label for="email">Email</label><input class="form-control" id="email" maxlength="80" name="email" size="20" type="text" /><br>
+  </div>
+  <div class="row mb-3">
+    <label for="company">Company</label><input class="form-control" id="company" maxlength="40" name="company" size="20" type="text" /><br>
+  </div>
+  <div class="row mb-3">
+    <label for="city">City</label><input class="form-control" id="city" maxlength="40" name="city" size="20" type="text" /><br>
+  </div>
+  <div class="row mb-3">
+    <label for="state">Country</label>
+      <select class="form-select" name="Country__c" id="Country__c">
+        <option value="France">France</option>
+        <option value="South Africa">South Africa</option>
+        <option value="UAE">UAE</option>
+      </select>
+    <br>
+  </div>
+  <input type="submit" name="submit">
 
-<label for="first_name">First Name</label><input class="form-control" id="first_name" maxlength="40" name="first_name" size="20" type="text" /><br>
 
-<label for="last_name">Last Name</label><input class="form-control" id="last_name" maxlength="80" name="last_name" size="20" type="text" /><br>
-
-<label for="email">Email</label><input class="form-control" id="email" maxlength="80" name="email" size="20" type="text" /><br>
-
-<label for="company">Company</label><input class="form-control" id="company" maxlength="40" name="company" size="20" type="text" /><br>
-
-<label for="city">City</label><input class="form-control" id="city" maxlength="40" name="city" size="20" type="text" /><br>
-
-  <label for="state">Country</label><input class="form-control" id="state" maxlength="20" name="Country__c" size="20" type="text" /><br>
-
-<input type="submit" name="submit">
 
 </form>
