--- a/webform.html
+++ b/webform.html
@@ -47,7 +47,7 @@
       </select>
     <br>
   </div>
-  <input type="submit" name="submit">
+  <input class="btn btn-primary" type="submit" name="submit">
 
 
 
