--- a/webform.html
+++ b/webform.html
@@ -12,7 +12,7 @@
 <!--  NOTE: Please add the following <FORM> element to your page.             -->
 <!--  ----------------------------------------------------------------------  -->
 
-<form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DHs00000P4HDX" method="POST">
+<form class="row g-3" action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DHs00000P4HDX" method="POST">
   
 <input type=hidden name="oid" value="00DHs00000P4HDX">
 <input type=hidden name="retURL" value="http://">
