--- a/webform.html
+++ b/webform.html
@@ -36,9 +36,6 @@
     <label for="company">Company</label><input class="form-control" id="company" maxlength="40" name="company" size="20" type="text" /><br>
   </div>
   <div class="row mb-3">
-    <label for="city">City</label><input class="form-control" id="city" maxlength="40" name="city" size="20" type="text" /><br>
-  </div>
-  <div class="row mb-3">
     <label for="state">Country</label>
       <select class="form-select" name="Country__c" id="Country__c">
         <option value="France">France</option>
@@ -46,6 +43,9 @@
         <option value="UAE">UAE</option>
       </select>
     <br>
+  </div>
+  <div class="row mb-3">
+    <label for="description">Message</label><input class="form-control" id="description" maxlength="500" name="description" size="500" type="text" /><br>
   </div>
   <input class="btn btn-primary" type="submit" name="submit">
 
