--- a/webform.html
+++ b/webform.html
@@ -12,7 +12,8 @@
 <!--  NOTE: Please add the following <FORM> element to your page.             -->
 <!--  ----------------------------------------------------------------------  -->
 
-<form class="row g-3" action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DHs00000P4HDX" method="POST">
+<br/>
+<form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DHs00000P4HDX" method="POST">
   
 <input type=hidden name="oid" value="00DHs00000P4HDX">
 <input type=hidden name="retURL" value="http://">
@@ -45,7 +46,7 @@
     <br>
   </div>
   <div class="row mb-3">
-    <label for="description">Message</label><input class="form-control" id="description" maxlength="500" name="description" size="500" type="text" /><br>
+    <label for="description">Message</label><textarea class="form-control" id="description" maxlength="500" name="description" rows="3" type="text" ></textarea><br>
   </div>
   <input class="btn btn-primary" type="submit" name="submit">
 
